--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,10 +10,16 @@ html(lang="en")
         header 
             h1 NOOM
         main
-            div#myStream
-                video#myFace(autoplay,playsinLine, width="400", height="400")
-                button#mute Mute
-                button#camera Turn Camera off
-                select#cameras
+            div#welcome
+                form
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room
+            div#call
+                div#myStream
+                    video#myFace(autoplay,playsinLine, width="400", height="400")
+                    button#mute Mute
+                    button#camera Turn Camera off
+                    select#cameras
+                        option(value="device") Face  Camera
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
