--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -21,5 +21,6 @@ html(lang="en")
                     button#camera Turn Camera off
                     select#cameras
                         option(value="device") Face  Camera
+                    video#peerFace(autoplay,playsinLine, width="400", height="400")
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
